--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     </head>
 <body>
 <h1>Hello World</h1>
-<p>I'm hosted with GitHub Pages.</p>
+
 <p>
     <a href="https://mhelioss.github.io/myblog/">My Blog</a>
 </p>
@@ -14,4 +14,5 @@
 <a href="https://www.goodreads.com/review/list/168558166?shelf=read" title="Matt's book recommendations, liked quotes, book clubs, book lists (read shelf)", rel="nofollow"><img border="0" alt="Matt's book recommendations, liked quotes, book clubs, book lists (read shelf)" src="https://s.gr-assets.com/images/badge/badge1.jpg">
 </a>
 </body>
+<footer>I'm hosted with GitHub Pages.</footer>
 </html>
