create main.css and link to it

--- a/index.html
+++ b/index.html
@@ -2,7 +2,8 @@
 <html>
     <head>
         <meta charset="utf-8">
-        <title>Home</title>
+        <title>mhelios</title>
+        <link rel="stylesheet" type="text/css" href="main.css" />
     </head>
 <body>
 <h1>Hello World</h1>
@@ -13,6 +14,7 @@
 <span style="color: #382110">my read shelf:</span><br/>
 <a href="https://www.goodreads.com/review/list/168558166?shelf=read" title="Matt's book recommendations, liked quotes, book clubs, book lists (read shelf)", rel="nofollow"><img border="0" alt="Matt's book recommendations, liked quotes, book clubs, book lists (read shelf)" src="https://s.gr-assets.com/images/badge/badge1.jpg">
 </a>
-</body>
 <footer>I'm hosted with GitHub Pages.</footer>
+</body>
+
 </html>
