--- a/index.html
+++ b/index.html
@@ -15,6 +15,12 @@
 <a href="https://www.goodreads.com/review/list/168558166?shelf=read" title="Matt's book recommendations, liked quotes, book clubs, book lists (read shelf)", rel="nofollow"><img border="0" alt="Matt's book recommendations, liked quotes, book clubs, book lists (read shelf)" src="https://s.gr-assets.com/images/badge/badge1.jpg">
 </a>
 <footer>I'm hosted with GitHub Pages.</footer>
+<div id="page-container">
+    <div id="content-wrap">
+      <!-- all other page content -->
+    </div>
+    <footer id="footer">I'm hosted with GitHub Pages.</footer>
+  </div>
 </body>
 
 </html>
