--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
 <span style="color: #382110">my read shelf:</span><br/>
 <a href="https://www.goodreads.com/review/list/168558166?shelf=read" title="Matt's book recommendations, liked quotes, book clubs, book lists (read shelf)", rel="nofollow"><img border="0" alt="Matt's book recommendations, liked quotes, book clubs, book lists (read shelf)" src="https://s.gr-assets.com/images/badge/badge1.jpg">
 </a>
+ <input type="checkbox" id="fntest1" /><label for="fntest1"><sup></sup></label><span><br><br>Footnote test.<br><br></span>
 <footer>I'm hosted with GitHub Pages.</footer>
 <div id="page-container">
     <div id="content-wrap">
