--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <h1>Hello World</h1>
 
 <p>
-    <a href="https://mhelioss.github.io/myblog/">My Blog</a>
+    <a href="https://mheli0s.github.io/myblog/">My Blog</a>
 </p>
 <span style="color: #382110">my read shelf:</span><br/>
 <a href="https://www.goodreads.com/review/list/168558166?shelf=read" title="Matt's book recommendations, liked quotes, book clubs, book lists (read shelf)", rel="nofollow"><img border="0" alt="Matt's book recommendations, liked quotes, book clubs, book lists (read shelf)" src="https://s.gr-assets.com/images/badge/badge1.jpg">
