--- a/index.html
+++ b/index.html
@@ -12,18 +12,19 @@
     <a href="https://mheli0s.github.io/myblog/">My Blog</a>
 </p>
 <script src="https://tryhackme.com/badge/3083694"></script>
-<span style="color: #382110">my read shelf:</span><br/>
+<span style="color: #382110"></span><br/>
 <a href="https://www.goodreads.com/review/list/168558166?shelf=read" title="Matt's book recommendations, liked quotes, book clubs, book lists (read shelf)", rel="nofollow"><img border="0" alt="Matt's book recommendations, liked quotes, book clubs, book lists (read shelf)" src="https://s.gr-assets.com/images/badge/badge1.jpg">
 </a>
-<br>
- <input type="checkbox" id="fntest1" /><label for="fntest1"><sup></sup></label><span><br><br>Footnote test.<br><br></span>
+<br><br>
+ <input type="checkbox" id="fntest1" /><label for="fntest1"><sup></sup></label><span><br><br>Footnote test.<br><br></span><br>
 <footer>I'm hosted with GitHub Pages.</footer>
 <div id="page-container">
     <div id="content-wrap">
       <!-- all other page content -->
     </div>
-    <footer id="footer">I'm hosted with GitHub Pages.</footer>
+    
   </div>
+<footer id="footer">I'm hosted with GitHub Pages.</footer>
 </body>
 
 </html>
