--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <a href="https://mheli0s.github.io/myblog/">My Blog</a>
 </p>
 <script src="https://tryhackme.com/badge/3083694"></script>
-<span style="color: #382110"></span><br/>
+<span style="color: #382110"></span><br><br>
 <a href="https://www.goodreads.com/review/list/168558166?shelf=read" title="Matt's book recommendations, liked quotes, book clubs, book lists (read shelf)", rel="nofollow"><img border="0" alt="Matt's book recommendations, liked quotes, book clubs, book lists (read shelf)" src="https://s.gr-assets.com/images/badge/badge1.jpg">
 </a>
 <br><br>
