--- a/index.html
+++ b/index.html
@@ -5,12 +5,16 @@
         <title>mhelios</title>
         <link rel="stylesheet" type="text/css" href="main.css" />
     </head>
-<body>
-<h1>Hello World</h1>
+    <body>
 
-<p>
-    <a href="https://mheli0s.github.io/myblog/">My Blog</a>
-</p>
+
+<nav>
+<a href="index.html">Home</a>
+<a href="myblog/blog.html">Blog</a>
+<a href="about.html">About</a>
+<a href="contact.html">Contact</a>
+</nav>
+<h2>Hello World</h2>
 <script src="https://tryhackme.com/badge/3083694"></script>
 <span style="color: #382110"></span><br><br>
 <a href="https://www.goodreads.com/review/list/168558166?shelf=read" title="Matt's book recommendations, liked quotes, book clubs, book lists (read shelf)", rel="nofollow"><img border="0" alt="Matt's book recommendations, liked quotes, book clubs, book lists (read shelf)" src="https://s.gr-assets.com/images/badge/badge1.jpg">
