--- a/index.html
+++ b/index.html
@@ -2,32 +2,35 @@
 <html>
     <head>
         <meta charset="utf-8">
-        <title>mhelios</title>
+        <title>mhelios Home</title>
         <link rel="stylesheet" type="text/css" href="main.css" />
     </head>
     <body>
-
-
-<nav>
-<a href="index.html">Home</a>
-<a href="myblog/blog.html">Blog</a>
-<a href="about.html">About</a>
-<a href="contact.html">Contact</a>
-</nav>
-<h2>Hello World</h2>
-<script src="https://tryhackme.com/badge/3083694"></script>
-<span style="color: #382110"></span><br><br>
-<a href="https://www.goodreads.com/review/list/168558166?shelf=read" title="Matt's book recommendations, liked quotes, book clubs, book lists (read shelf)", rel="nofollow"><img border="0" alt="Matt's book recommendations, liked quotes, book clubs, book lists (read shelf)" src="https://s.gr-assets.com/images/badge/badge1.jpg">
-</a>
-<br><br>
- <input type="checkbox" id="fntest1" /><label for="fntest1"><sup></sup></label><span><br><br>Footnote test.<br><br></span><br>
-<div id="page-container">
-    <div id="content-wrap">
-      <!-- all other page content -->
-    </div>
-    
-  </div>
-<footer id="footer">I'm hosted with GitHub Pages.</footer>
-</body>
-
+        <nav>
+            <a href="index.html">Home</a>
+            <a href="myblog/blog.html">Blog</a>
+            <a href="about.html">About</a>
+            <a href="contact.html">Contact</a>
+        </nav>
+        <h2>Hello World</h2>
+        <script src="https://tryhackme.com/badge/3083694"></script>
+        <span style="color: #382110"></span><br><br>
+        <a href="https://www.goodreads.com/review/list/168558166?shelf=read" 
+           title="Matt's book recommendations, liked quotes, book clubs, book lists (read shelf)", rel="nofollow">
+           <img border="0" alt="Matt's book recommendations, liked quotes, book clubs, book lists (read shelf)" 
+                src="https://s.gr-assets.com/images/badge/badge1.jpg">
+        </a>
+        <br><br> 
+        <div id="page-container">
+            <div id="content-wrap">
+                <!-- all other page content -->
+            </div>
+        </div>
+        <footer id="footer">
+            <i></i>I'm hosted with GitHub Pages.</i>
+            <input type="checkbox" id="fntest1" />
+            <label for="fntest1"><sup></sup></label>
+            <span><br><br>Footnote test.<br><br></span>
+        </footer>
+    </body>
 </html>
