--- a/contact.html
+++ b/contact.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <meta charset="utf-8">
-        <title>Blog</title>
+        <title>Contact</title>
         <link rel="stylesheet" type="text/css" href="main.css" />
     </head>
     <body>
@@ -12,6 +12,6 @@
             <a href="about.html">About</a>
             <a href="contact.html">Contact</a>
         </nav>
-        <h3>Contact me on:</h3>
+        <h3>My links:</h3>
     </body>
 </html>
