--- a/index.html
+++ b/index.html
@@ -24,13 +24,13 @@
         <div id="page-container">
             <div id="content-wrap">
                 <!-- all other page content -->
+                <input type="checkbox" id="fntest1" />
+                <label for="fntest1"><sup></sup></label>
+                <span><br><br>Footnote test.<br><br></span>
             </div>
         </div>
         <footer id="footer">
-            <i></i>I'm hosted with GitHub Pages.</i>
-            <input type="checkbox" id="fntest1" />
-            <label for="fntest1"><sup></sup></label>
-            <span><br><br>Footnote test.<br><br></span>
+            <i>I'm hosted with GitHub Pages.</i>
         </footer>
     </body>
 </html>
