--- a/myblog/blog.html
+++ b/myblog/blog.html
@@ -7,10 +7,10 @@
     </head>
     <body>
         <nav>
-            <a href="index.html">Home</a>
-            <a href="myblog/blog.html">Blog</a>
-            <a href="about.html">About</a>
-            <a href="contact.html">Contact</a>
+            <a href="../index.html">Home</a>
+            <a href="blog.html">Blog</a>
+            <a href="../about.html">About</a>
+            <a href="../contact.html">Contact</a>
         </nav>
         <h2>Welcome to my blog.</h2>
     </body>
