--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
             <a href="about.html">About</a>
             <a href="contact.html">Contact</a>
         </nav>
-        <h2>Hello World</h2>
+        <h2 align="center">Hello World</h2>
         <script src="https://tryhackme.com/badge/3083694"></script>
         <span style="color: #382110"></span><br><br>
         <a href="https://www.goodreads.com/review/list/168558166?shelf=read" 
@@ -29,7 +29,7 @@
                 <span><br><br>Footnote test.<br><br></span>
             </div>
         </div>
-        <footer id="footer">
+        <footer id="footer" align="center">
             <i>I'm hosted with GitHub Pages.</i>
         </footer>
     </body>
