--- a/myblog/blog.html
+++ b/myblog/blog.html
@@ -8,7 +8,7 @@
     <body>
         <nav>
             <a href="../index.html">Home</a>
-            <a href="blog.html">Blog</a>
+            <a href="./blog.html">Blog</a>
             <a href="../about.html">About</a>
             <a href="../contact.html">Contact</a>
         </nav>
