--- a/index.html
+++ b/index.html
@@ -6,13 +6,13 @@
         <link rel="stylesheet" type="text/css" href="main.css" />
     </head>
     <body>
-        <nav>
+        <nav align="center">
             <a href="index.html">Home</a>
             <a href="myblog/blog.html">Blog</a>
             <a href="about.html">About</a>
             <a href="contact.html">Contact</a>
         </nav>
-        <h2 align="center">Hello World</h2>
+        <h2 align="center">Hello World! :)</h2>
         <script src="https://tryhackme.com/badge/3083694"></script>
         <span style="color: #382110"></span><br><br>
         <a href="https://www.goodreads.com/review/list/168558166?shelf=read" 
