--- a/index.html
+++ b/index.html
@@ -12,25 +12,25 @@
             <a href="about.html">About</a>
             <a href="contact.html">Contact</a>
         </nav>
-        <h2 align="center">Hello World! :)</h2>
-        <script src="https://tryhackme.com/badge/3083694"></script>
-        <span style="color: #382110"></span><br><br>
-        <a href="https://www.goodreads.com/review/list/168558166?shelf=read" 
-           title="Matt's book recommendations, liked quotes, book clubs, book lists (read shelf)", rel="nofollow">
-           <img border="0" alt="Matt's book recommendations, liked quotes, book clubs, book lists (read shelf)" 
-                src="https://s.gr-assets.com/images/badge/badge1.jpg">
-        </a>
-        <br><br> 
+        <h2 align="center">Hello World! :) 
+            <input type="checkbox" id="fntest1" />
+            <label for="fntest1"><sup></sup></label>
+            <span><br><br>Footnote test.<br><br></span>
+        </h2>
         <div id="page-container">
             <div id="content-wrap">
                 <!-- all other page content -->
-                <input type="checkbox" id="fntest1" />
-                <label for="fntest1"><sup></sup></label>
-                <span><br><br>Footnote test.<br><br></span>
             </div>
         </div>
         <footer id="footer" align="center">
             <i>I'm hosted with GitHub Pages.</i>
+            <script src="https://tryhackme.com/badge/3083694"></script>
+            <span style="color: #382110"></span><br><br>
+            <a href="https://www.goodreads.com/review/list/168558166?shelf=read" 
+               title="Matt's book recommendations, liked quotes, book clubs, book lists (read shelf)", rel="nofollow">
+               <img border="0" alt="Matt's book recommendations, liked quotes, book clubs, book lists (read shelf)" 
+                    src="https://s.gr-assets.com/images/badge/badge1.jpg">
+            </a>
         </footer>
     </body>
 </html>
