--- a/index.html
+++ b/index.html
@@ -12,11 +12,11 @@
             <a href="about.html">About</a>
             <a href="contact.html">Contact</a>
         </nav>
-        <h2 align="center">Hello World! :) 
-            <input type="checkbox" id="fntest1" />
+        <h2 align="center">Hello World! :)  
+        </h2>
+        <input type="checkbox" id="fntest1" />
             <label for="fntest1"><sup></sup></label>
             <span><br><br>Footnote test.<br><br></span>
-        </h2>
         <div id="page-container">
             <div id="content-wrap">
                 <!-- all other page content -->
@@ -25,7 +25,7 @@
         <footer id="footer" align="center">
             <i>I'm hosted with GitHub Pages.</i>
             <script src="https://tryhackme.com/badge/3083694"></script>
-            <span style="color: #382110"></span><br><br>
+            <span style="color: #382110"></span>
             <a href="https://www.goodreads.com/review/list/168558166?shelf=read" 
                title="Matt's book recommendations, liked quotes, book clubs, book lists (read shelf)", rel="nofollow">
                <img border="0" alt="Matt's book recommendations, liked quotes, book clubs, book lists (read shelf)" 
