--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         </nav>
         <h2 align="center">Hello World! :)  
         </h2>
-        <input type="checkbox" id="fntest1" />
+        <input type="checkbox" id="fntest1" align="center"/>
             <label for="fntest1"><sup></sup></label>
             <span><br><br>Footnote test.<br><br></span>
         <div id="page-container">
