--- a/index.html
+++ b/index.html
@@ -17,11 +17,11 @@
         <input type="checkbox" id="fntest1" align="center"/>
             <label for="fntest1"><sup></sup></label>
             <span><br><br>Footnote test.<br><br></span>
-        <div id="page-container">
+     <!--   <div id="page-container">
             <div id="content-wrap">
                 <!-- all other page content -->
             </div>
-        </div>
+        </div>-->
         <footer id="footer" align="center">
             <i>I'm hosted with GitHub Pages.</i>
             <script src="https://tryhackme.com/badge/3083694"></script>
