--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
         </nav>
         <h2 align="center">Hello World! :)  
         </h2>
-        <input type="checkbox" id="fntest1" align="center"/>
-            <label for="fntest1"><sup></sup></label>
+        <input type="checkbox" id="fntest1"/>
+            <label for="fntest1" align="center"><sup></sup></label>
             <span><br><br>Footnote test.<br><br></span>
      <!--   <div id="page-container"> -->
      <!--       <div id="content-wrap"> -->
