--- a/index.html
+++ b/index.html
@@ -14,15 +14,15 @@
         </nav>
         <h2 align="center">Hello World! :)  
         </h2>
-        <input type="checkbox" id="fntest1"/>
-            <label for="fntest1" align="center"><sup></sup></label>
-            <span><br><br>Footnote test.<br><br></span>
      <!--   <div id="page-container"> -->
      <!--       <div id="content-wrap"> -->
                 <!-- all other page content -->
      <!--       </div> -->
      <!--   </div> -->
         <footer id="footer" align="center">
+            <input type="checkbox" id="fntest1"/>
+            <label for="fntest1" align="center"><sup></sup></label>
+            <span><br><br>Footnote test.<br><br></span><br>
             <i>I'm hosted with GitHub Pages.</i>
             <script src="https://tryhackme.com/badge/3083694"></script>
             <span style="color: #382110"></span>
