--- a/index.html
+++ b/index.html
@@ -17,9 +17,9 @@
         <!--
             <div id="page-container"> 
                 <div id="content-wrap"> 
-                <!-- all other page content -->
+                <!-- all other page content 
                 </div> 
-            </div>
+            </div> 
         -->
         <footer id="footer" align="center">
             <input type="checkbox" id="fntest1"/>
