--- a/myblog/blog.html
+++ b/myblog/blog.html
@@ -6,7 +6,7 @@
         <link rel="stylesheet" type="text/css" href="main.css" />
     </head>
     <body>
-        <nav>
+        <nav align="center">
             <a href="../index.html">Home</a>
             <a href="./blog.html">Blog</a>
             <a href="../about.html">About</a>
