--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     </head>
     <body>
         <nav align="center">
-            <a href="index.html">Home</a>
+            <a href="index.html"><button>Home</button></a>
             <a href="myblog/blog.html">Blog</a>
             <a href="about.html">About</a>
             <a href="contact.html">Contact</a>
