--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
     <body>
         <nav align="center">
             <a href="index.html"><button>Home</button></a>
-            <a href="myblog/blog.html">Blog</a>
-            <a href="about.html">About</a>
-            <a href="contact.html">Contact</a>
+            <a href="myblog/blog.html"><button>Blog</button></a>
+            <a href="about.html"><button>About</button></a>
+            <a href="contact.html"><button>Contact</button></a>
         </nav>
         <h2 align="center">Hello World! :)  
         </h2>
