--- a/myblog/blog.html
+++ b/myblog/blog.html
@@ -7,10 +7,10 @@
     </head>
     <body>
         <nav align="center">
-            <a href="../index.html">Home</a>
-            <a href="./blog.html">Blog</a>
-            <a href="../about.html">About</a>
-            <a href="../contact.html">Contact</a>
+            <a href="../index.html"><button>Home</button></a>
+            <a href="./blog.html"><button>Blog</button></a>
+            <a href="../about.html"><button>About</button></a>
+            <a href="../contact.html"><button>Contact</button></a>
         </nav>
         <h2>Welcome to my blog.</h2>
     </body>
