--- a/index.html
+++ b/index.html
@@ -6,12 +6,14 @@
         <link rel="stylesheet" type="text/css" href="main.css" />
     </head>
     <body>
+        <header>
         <nav align="center">
             <a href="index.html"><button>Home</button></a>
             <a href="myblog/blog.html"><button>Blog</button></a>
             <a href="about.html"><button>About</button></a>
             <a href="contact.html"><button>Contact</button></a>
         </nav>
+        </header>
         <h2 align="center">Hello World! :)  
         </h2>
         <!--
