--- a/about.html
+++ b/about.html
@@ -6,12 +6,14 @@
         <link rel="stylesheet" type="text/css" href="main.css" />
     </head>
     <body>
+        <header>
         <nav align="center">
             <a href="index.html"><button>Home</button></a>
             <a href="myblog/blog.html"><button>Blog</button></a>
             <a href="about.html"><button>About</button></a>
             <a href="contact.html"><button>Contact</button></a>
         </nav>
+        </header>
         <p>Hi, I'm Matt. Aspiring to enter the IT industry in the CyberSec field.</p>
     </body>
 </html>
