--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
     <head>
         <meta charset="utf-8">
         <title>mhelios</title>
@@ -17,10 +17,15 @@
 <h2>Hello World</h2>
 <script src="https://tryhackme.com/badge/3083694"></script>
 <span style="color: #382110"></span><br><br>
-<a href="https://www.goodreads.com/review/list/168558166?shelf=read" title="Matt's book recommendations, liked quotes, book clubs, book lists (read shelf)", rel="nofollow"><img border="0" alt="Matt's book recommendations, liked quotes, book clubs, book lists (read shelf)" src="https://s.gr-assets.com/images/badge/badge1.jpg">
+<a href="https://www.goodreads.com/review/list/168558166?shelf=read" rel="nofollow"
+   title="Matt's book recommendations, liked quotes, book clubs, book lists (read shelf)">
+    <!--suppress HtmlDeprecatedAttribute -->
+    <img alt="Matt's book recommendations, liked quotes, book clubs, book lists (read shelf)"
+         border="0" src="https://s.gr-assets.com/images/badge/badge1.jpg">
 </a>
 <br><br>
- <input type="checkbox" id="fntest1" /><label for="fntest1"><sup></sup></label><span><br><br>Footnote test.<br><br></span><br>
+<input id="fntest1" type="checkbox"/><label for="fntest1"><sup></sup></label>
+<span><br><br>Footnote test.<br><br></span><br>
 <div id="page-container">
     <div id="content-wrap">
       <!-- all other page content -->
