--- a/index.html
+++ b/index.html
@@ -7,18 +7,12 @@
     </head>
     <body>
         <header>
-       <!-- <nav align="center">
+        <nav align="center">
             <a href="index.html"><button>Home</button></a>
             <a href="myblog/blog.html"><button>Blog</button></a>
             <a href="about.html"><button>About</button></a>
             <a href="contact.html"><button>Contact</button></a>
-        </nav> -->
-        <ul>
-             <li><a href="index.html">Home</a></li>
-             <li><a href="myblog/myblog.html">Blog</button></a>
-             <li><a href="about.html">About</a></li>
-             <li><a href="contact.html">Contact</a></li>
-        </ul> 
+        </nav>
         </header>
         <h2 align="center">Hello World! :)  
         </h2>
