--- a/about.html
+++ b/about.html
@@ -12,6 +12,6 @@
             <a href="about.html">About</a>
             <a href="contact.html">Contact</a>
         </nav>
-        <p>Hi, I'm Matt. Aspiring to enter the IT industry in the CyberSec field.</p>
+        <p>Hi, I'm Matt/"mheli0s". Aspiring to enter the IT industry in the CyberSec field.</p>
     </body>
 </html>
