--- a/about.html
+++ b/about.html
@@ -13,6 +13,6 @@
             <a href="about.html"><button>About</button></a>
             <a href="contact.html"><button>Contact</button></a>
         </nav>
-        <p>Hi, I'm Matt/"mheli0s". Aspiring to enter the IT industry in the CyberSec field.</p>
+        <p>Hi, I'm "mheli0s". Aspiring to enter the IT industry in the CyberSec field.</p>
     </body>
 </html>
