--- a/myblog/blog.html
+++ b/myblog/blog.html
@@ -1,19 +1,24 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <meta charset="utf-8">
-        <title>Blog</title>
-        <link rel="stylesheet" type="text/css" href="main.css" />
-    </head>
-    <body>
-        <header>
-        <nav align="center">
-            <a href="../index.html"><button>Home</button></a>
-            <a href="./blog.html"><button>Blog</button></a>
-            <a href="../about.html"><button>About</button></a>
-            <a href="../contact.html"><button>Contact</button></a>
-        </nav>
-        </header>
-        <h2>Welcome to my blog.</h2>
-    </body>
+  <head>
+    <meta charset="utf-8" />
+    <title>Blog</title>
+    <link rel="stylesheet" type="text/css" href="main.css" />
+  </head>
+  <body>
+    <header>
+      <nav align="center">
+        <a href="../index.html"><button>Home</button></a>
+        <a href="./blog.html"><button>Blog</button></a>
+        <a href="../about.html"><button>About</button></a>
+        <a href="../contact.html"><button>Contact</button></a>
+      </nav>
+    </header>
+    <h2>Welcome to my blog.</h2>
+
+    An article I wrote way back in 2004 for FedoraNews.org in Fedora Core 1:
+    <a href="https://fedoranews.org/contributors/matt_hansen/nautilus/">
+      <h4>How to run a program from GNOME menu with root privileges</h4></a
+    >
+  </body>
 </html>
