add my online IT certs links

--- a/about.html
+++ b/about.html
@@ -13,6 +13,9 @@
             <a href="about.html"><button>About</button></a>
             <a href="contact.html"><button>Contact</button></a>
         </nav>
-        <p>Hi, I'm "mheli0s". Aspiring to enter the IT industry in the CyberSec field.</p>
+        <p>Hi, I'm Matt "mh3li0s". Aspiring to enter the IT industry in the CyberSec field.</p>
+        <br><br>
+        <h2>IT Certifications</h2>
+            <list><li><a href=cert.pdf">IT Masters/CSU Pen Testing 2025 Short Course</a></li></list>
     </body>
 </html>
