Update about.html - fix broken cert link

--- a/about.html
+++ b/about.html
@@ -16,6 +16,6 @@
         <p>Hi, I'm Matt "mh3li0s". Aspiring to enter the IT industry in the CyberSec field.</p>
         <br><br>
         <h2>IT Certifications</h2>
-            <list><li><a href=Certificate_of_Completion.pdf">IT Masters/CSU Pen Testing 2025 Short Course</a></li></list>
+            <list><li><a href=Certificate_of_Completion.pdf>Aug 2025 - IT Masters/CSU Pen Testing 2025 Short Course</a></li></list>
     </body>
 </html>
