Update blog.html - convert blog link to list format

--- a/myblog/blog.html
+++ b/myblog/blog.html
@@ -18,7 +18,9 @@
 
     An article I wrote way back in 2004 for FedoraNews.org on Fedora Core 1:
     <a href="https://fedoranews.org/contributors/matt_hansen/nautilus/">
-      <h4>How to run a program from GNOME menu with root privileges</h4></a
-    >
+      <h4><list>
+            <li>How to run a program from GNOME menu with root privileges</li>
+          </list>
+      </h4></a>
   </body>
 </html>
